--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/node": "^10.3.1",
     "chai": "^4.1.2",
+    "genetic-js": "^0.1.14",
     "tsc": "^1.20150623.0",
     "typescript": "^2.9.1"
   },
