--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --ext ts",
     "tsc": "./node_modules/typescript/bin/tsc",
     "test": "tsc && mocha dist/**/*.spec.js -C --exit",
-    "docker": "docker build -t socks . && docker run -p 3000:3000 -p 3001:3001 socks node dist"
+    "docker": "docker build -t socks . && docker run -p 3000:3000 -p 3001:3001 socks node dist",
+    "setup": "yarn install && git submodule update --init && cd damage-calc/calc && yarn install && yarn compile || cd ../../ && yarn run tsc"
+
   },
   "author": "",
   "license": "MIT",
